    *  ~  means something has changed                                 *
    *  +  means a new addition (mapping / file / functionality)       *
    *  -  means removal of something (mapping / file / functionality) *
    *                                                                 *
    *******************************************************************


recls 1.10.1 (beta 1) released - 23rd February 2025
===================================================

Summary:
--------

 * added `Recls_IsEntrySocket()` API function and refactored Entry API;
 * Ensured compatibility with Pantheios;
 * Updated dependency requirements;

Details:
--------

Added `Recls_IsEntrySocket()` API function and refactored Entry API:
 * optionally incorporates **b64** via CMake;
 * added `Recls_IsEntrySocket()` and `recls::entry#is_socket()`;
 * added component test **test.component.util.cpp.is_socket**;
 * renamed API functions `Recls_IsFile*()` => `Recls_IsEntry*()`, and added backwards-compatible functions;

Ensured compatibility with Pantheios:
 * optionally incorporates **b64** via CMake;
 * **test.scratch.with_pantheios** adjusted to ensure full functionality;

Updated dependency requirements:
 * now depends on 1.11.1-beta2+ of **STLSoft**;
 * now depends on 0.26.0-beta3+ of **xTests**;


recls 1.10.1 (alpha 9) released - 23rd October 2024
===================================================

Summary:
--------

 * Project boilerplate improvements;
 * Updated dependency requirements;

Details:
--------

Project boilerplate improvements:
 * fleshed out **INSTALL.md**;

Updated dependency requirements:
 * now depends on 0.25+ of **xTests**;


recls 1.10.1 (alpha 8) released - 18th October 2024
===================================================

Summary:
--------

 * CMake build scripts enhancements;
 * Visual C++ (19xx+) compatibility;

Details:
--------

CMake build scripts enhancements:
 * canonicalised CMake files;
 * canonicalised CMake build script files;

