@@ -1,146 +1,146 @@
 {
-  "[bat]": {
-    "editor.insertSpaces": true,
-    "editor.rulers": [ 60, 76 ],
-    "editor.tabSize": 4,
-  },
-  "[c]": {
-    "editor.insertSpaces": true,
-    "editor.rulers": [ 60, 76 ],
-    "editor.tabSize": 4,
-  },
-  "[cpp]": {
-    "editor.insertSpaces": true,
-    "editor.rulers": [ 60, 64, 68, 76 ],
-    "editor.tabSize": 4,
-  },
-  "[cmake]": {
-    "editor.insertSpaces": false,
-    "editor.tabSize": 4,
-  },
-  "[json]": {
-    "editor.insertSpaces": true,
-    "editor.tabSize": 2,
-  },
-  "[markdown]": {
-    "editor.insertSpaces": true,
-    "editor.tabSize": 2,
-  },
-  "[ruby]": {
-    "editor.insertSpaces": true,
-    "editor.tabSize": 2,
-  },
-  "[shellscript]": {
-    "editor.insertSpaces": true,
-    "editor.rulers": [ 60, 76 ],
-    "editor.tabSize": 2,
-  },
-  "cmake.configureOnOpen": false,
-  "editor.detectIndentation": false,
-  "editor.insertSpaces": false,
-  "editor.renderWhitespace" : "all",
-  "editor.rulers": [ 76 ],
-  "editor.tabSize": 2,
-  "files.associations": {
-    "__bit_reference": "cpp",
-    "__bits": "cpp",
-    "__config": "cpp",
-    "__debug": "cpp",
-    "__errc": "cpp",
-    "__functional_03": "cpp",
-    "__functional_base": "cpp",
-    "__hash_table": "cpp",
-    "__locale": "cpp",
-    "__memory": "cpp",
-    "__mutex_base": "cpp",
-    "__node_handle": "cpp",
-    "__nullptr": "cpp",
-    "__split_buffer": "cpp",
-    "__string": "cpp",
-    "__threading_support": "cpp",
-    "__tree": "cpp",
-    "__tuple": "cpp",
-    "__verbose_abort": "cpp",
-    "algorithm": "cpp",
-    "array": "cpp",
-    "atomic": "cpp",
-    "bit": "cpp",
-    "bitset": "cpp",
-    "cctype": "cpp",
-    "charconv": "cpp",
-    "chrono": "cpp",
-    "clocale": "cpp",
-    "cmath": "cpp",
-    "compare": "cpp",
-    "complex": "cpp",
-    "concepts": "cpp",
-    "cstdarg": "cpp",
-    "cstddef": "cpp",
-    "cstdint": "cpp",
-    "cstdio": "cpp",
-    "cstdlib": "cpp",
-    "cstring": "cpp",
-    "ctime": "cpp",
-    "cwchar": "cpp",
-    "cwctype": "cpp",
-    "deque": "cpp",
-    "exception": "cpp",
-    "execution": "cpp",
-    "format": "cpp",
-    "functional": "cpp",
-    "implicit_link.h": "c",
-    "initializer_list": "cpp",
-    "iomanip": "cpp",
-    "ios": "cpp",
-    "iosfwd": "cpp",
-    "iostream": "cpp",
-    "istream": "cpp",
-    "iterator": "cpp",
-    "limits": "cpp",
-    "list": "cpp",
-    "locale": "cpp",
-    "map": "cpp",
-    "memory": "cpp",
-    "memory_resource": "cpp",
-    "mutex": "cpp",
-    "new": "cpp",
-    "numeric": "cpp",
-    "optional": "cpp",
-    "ostream": "cpp",
-    "queue": "cpp",
-    "ratio": "cpp",
-    "set": "cpp",
-    "shwild.h": "c",
-    "sstream": "cpp",
-    "stack": "cpp",
-    "stdexcept": "cpp",
-    "streambuf": "cpp",
-    "string": "cpp",
-    "string_view": "cpp",
-    "system_error": "cpp",
-    "thread": "cpp",
-    "tuple": "cpp",
-    "type_traits": "cpp",
-    "typeinfo": "cpp",
-    "unordered_map": "cpp",
-    "utility": "cpp",
-    "variant": "cpp",
-    "vector": "cpp",
-    "xfacet": "cpp",
-    "xiosbase": "cpp",
-    "xlocale": "cpp",
-    "xlocbuf": "cpp",
-    "xlocinfo": "cpp",
-    "xlocmes": "cpp",
-    "xlocmon": "cpp",
-    "xlocnum": "cpp",
-    "xloctime": "cpp",
-    "xmemory": "cpp",
-    "xstring": "cpp",
-    "xtr1common": "cpp",
-    "xtree": "cpp",
-    "xutility": "cpp",
-  },
-  "files.insertFinalNewline": true,
-  "files.trimTrailingWhitespace": true,
+	"[bat]": {
+		"editor.insertSpaces": true,
+		"editor.rulers": [ 60, 76 ],
+		"editor.tabSize": 4,
+	},
+	"[c]": {
+		"editor.insertSpaces": true,
+		"editor.rulers": [ 60, 76 ],
+		"editor.tabSize": 4,
+	},
+	"[cpp]": {
+		"editor.insertSpaces": true,
+		"editor.rulers": [ 60, 64, 68, 76 ],
+		"editor.tabSize": 4,
+	},
+	"[cmake]": {
+		"editor.insertSpaces": false,
+		"editor.tabSize": 4,
+	},
+	"[json]": {
+		"editor.insertSpaces": true,
+		"editor.tabSize": 2,
+	},
+	"[markdown]": {
+		"editor.insertSpaces": true,
+		"editor.tabSize": 2,
+	},
+	"[ruby]": {
+		"editor.insertSpaces": true,
+		"editor.tabSize": 2,
+	},
+	"[shellscript]": {
+		"editor.insertSpaces": true,
+		"editor.rulers": [ 60, 76 ],
+		"editor.tabSize": 2,
+	},
+	"cmake.configureOnOpen": false,
+	"editor.detectIndentation": false,
+	"editor.insertSpaces": false,
+	"editor.renderWhitespace" : "all",
+	"editor.rulers": [ 76 ],
+	"editor.tabSize": 2,
+	"files.associations": {
+		"__bit_reference": "cpp",
+		"__bits": "cpp",
+		"__config": "cpp",
+		"__debug": "cpp",
+		"__errc": "cpp",
+		"__functional_03": "cpp",
+		"__functional_base": "cpp",
+		"__hash_table": "cpp",
+		"__locale": "cpp",
+		"__memory": "cpp",
+		"__mutex_base": "cpp",
+		"__node_handle": "cpp",
+		"__nullptr": "cpp",
+		"__split_buffer": "cpp",
+		"__string": "cpp",
+		"__threading_support": "cpp",
+		"__tree": "cpp",
+		"__tuple": "cpp",
+		"__verbose_abort": "cpp",
+		"algorithm": "cpp",
+		"array": "cpp",
+		"atomic": "cpp",
+		"bit": "cpp",
+		"bitset": "cpp",
+		"cctype": "cpp",
+		"charconv": "cpp",
+		"chrono": "cpp",
+		"clocale": "cpp",
+		"cmath": "cpp",
+		"compare": "cpp",
+		"complex": "cpp",
+		"concepts": "cpp",
+		"cstdarg": "cpp",
+		"cstddef": "cpp",
+		"cstdint": "cpp",
+		"cstdio": "cpp",
+		"cstdlib": "cpp",
+		"cstring": "cpp",
+		"ctime": "cpp",
+		"cwchar": "cpp",
+		"cwctype": "cpp",
+		"deque": "cpp",
+		"exception": "cpp",
+		"execution": "cpp",
+		"format": "cpp",
+		"functional": "cpp",
+		"implicit_link.h": "c",
+		"initializer_list": "cpp",
+		"iomanip": "cpp",
+		"ios": "cpp",
+		"iosfwd": "cpp",
+		"iostream": "cpp",
+		"istream": "cpp",
+		"iterator": "cpp",
+		"limits": "cpp",
+		"list": "cpp",
+		"locale": "cpp",
+		"map": "cpp",
+		"memory": "cpp",
+		"memory_resource": "cpp",
+		"mutex": "cpp",
+		"new": "cpp",
+		"numeric": "cpp",
+		"optional": "cpp",
+		"ostream": "cpp",
+		"queue": "cpp",
+		"ratio": "cpp",
+		"set": "cpp",
+		"shwild.h": "c",
+		"sstream": "cpp",
+		"stack": "cpp",
+		"stdexcept": "cpp",
+		"streambuf": "cpp",
+		"string": "cpp",
+		"string_view": "cpp",
+		"system_error": "cpp",
+		"thread": "cpp",
+		"tuple": "cpp",
+		"type_traits": "cpp",
+		"typeinfo": "cpp",
+		"unordered_map": "cpp",
+		"utility": "cpp",
+		"variant": "cpp",
+		"vector": "cpp",
+		"xfacet": "cpp",
+		"xiosbase": "cpp",
+		"xlocale": "cpp",
+		"xlocbuf": "cpp",
+		"xlocinfo": "cpp",
+		"xlocmes": "cpp",
+		"xlocmon": "cpp",
+		"xlocnum": "cpp",
+		"xloctime": "cpp",
+		"xmemory": "cpp",
+		"xstring": "cpp",
+		"xtr1common": "cpp",
+		"xtree": "cpp",
+		"xutility": "cpp",
+	},
+	"files.insertFinalNewline": true,
+	"files.trimTrailingWhitespace": true,
 }
