@@ -4,6 +4,7 @@
 
 | Date                  | News Item                                                 |
 | --------------------- | --------------------------------------------------------- |
+|                       |   recls 1.10.1 (beta 2) released                          |
 | 23rd February 2025    |   recls 1.10.1 (beta 1) released                          |
 | 23rd October 2024     |   recls 1.10.1 (alpha 9) released                         |
 | 18th October 2024     |   recls 1.10.1 (alpha 8) released                         |
