@@ -17,6 +17,13 @@ recls - Changes
     *******************************************************************
 
 
+recls 1.10.1 (beta 2) released -
+===================================================
+
+ * GCC compatibility;
+ * tidying;
+
+
 recls 1.10.1 (beta 1) released - 23rd February 2025
 ===================================================
 
